Fixed align left class

--- a/wp-content/themes/knight_wallace/assets/scss/_knight_wallace.scss
+++ b/wp-content/themes/knight_wallace/assets/scss/_knight_wallace.scss
@@ -24,7 +24,7 @@ img.alignright, figure.alignright {
     margin: 0 0 1em 1em;
 }
 
-img.alignleft, figure.alignright {
+img.alignleft, figure.alignleft {
     float: left;
     margin: 0 1em 1em 0;
 }
